Try some PackageReference logic.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ if (ANDROID OR IOS OR EMSCRIPTEN)
     set(ALIMER_BUILD_EDITOR OFF CACHE INTERNAL "Disable C# editor" FORCE)
 else ()
     option(ALIMER_BUILD_TOOLS "Build tools" ON)
-    if (WIN32 AND "${CMAKE_GENERATOR}" MATCHES "Visual Studio")    
+    if (MSVC)
         option(ALIMER_BUILD_EDITOR "Build C# Editor" ON)
     endif ()
 endif ()
