--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Engine
 add_subdirectory(Alimer)
 
-if (ALIMER_BUILD_TOOLS OR ALIMER_BUILD_EDITOR)
+if (ALIMER_BUILD_TOOLS)
     add_subdirectory(Tools)
 endif ()
