Reworking Application logic with rename to Game, GameSystem, GameTime and GameWindow, cleanup platform logic.

--- a/src/Alimer/CMakeLists.txt
+++ b/src/Alimer/CMakeLists.txt
@@ -47,12 +47,6 @@ if(NOT (EMSCRIPTEN OR ANDROID))
     )
 endif ()
 
-if(WIN32)
-    define_engine_source_files(
-        Application/Windows
-    )
-endif ()
-
 # Graphics sources
 if (ALIMER_GRAPHICS_VULKAN)
     define_engine_source_files(
@@ -104,6 +98,7 @@ if (WIN32)
     target_compile_definitions(${PROJECT_NAME} PUBLIC _SCL_SECURE_NO_WARNINGS _CRT_SECURE_NO_WARNINGS _CRT_SECURE_NO_DEPRECATE)
     target_compile_options(${PROJECT_NAME} PUBLIC $<$<CONFIG:DEBUG>:-D_SECURE_SCL_THROWS=0> $<$<CONFIG:DEBUG>:-D_SILENCE_DEPRECATION_OF_SECURE_SCL_THROWS>)
     target_compile_definitions(${PROJECT_NAME} PUBLIC _HAS_ITERATOR_DEBUGGING=$<CONFIG:DEBUG> _SECURE_SCL=$<CONFIG:DEBUG>)
+	target_compile_definitions(${PROJECT_NAME} PUBLIC _HAS_EXCEPTIONS=0)
 
     # Enable unicode strings
     target_compile_definitions(${PROJECT_NAME} PUBLIC _UNICODE)
