Stopwatch class support (from dotnet), GameTime and more Game loop logic with GameSystem.

--- a/src/Alimer/CMakeLists.txt
+++ b/src/Alimer/CMakeLists.txt
@@ -36,6 +36,7 @@ endmacro()
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 define_engine_source_files(
     Core
+    Diagnostics
     Graphics
     Input
     Games
