--- a/src/Alimer/CMakeLists.txt
+++ b/src/Alimer/CMakeLists.txt
@@ -37,6 +37,7 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DI
 define_engine_source_files(
     Core
     Diagnostics
+    Math
     Graphics
     Input
     Games
