Reorganise folders and add volk, WIP vulkan backend.

--- a/src/Alimer/CMakeLists.txt
+++ b/src/Alimer/CMakeLists.txt
@@ -50,10 +50,12 @@ if(NOT (EMSCRIPTEN OR ANDROID))
     )
 endif ()
 
+if (ALIMER_GRAPHICS_VULKAN)
+    define_engine_source_files(Graphics/Vulkan)
+endif()
+
 if (ALIMER_GRAPHICS_D3D12)
-    define_engine_source_files(
-        Graphics/D3D12
-    )
+    define_engine_source_files(Graphics/D3D12)
 endif()
 
 group_sources()
@@ -71,13 +73,19 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 )
 
 target_link_libraries(${PROJECT_NAME}
-    agpu
     EASTL
 )
 
 if(NOT (EMSCRIPTEN OR ANDROID))
     target_link_libraries(${PROJECT_NAME}
         glfw
+    )
+endif ()
+
+if (ALIMER_GRAPHICS_VULKAN)
+    target_link_libraries(${PROJECT_NAME}
+        volk
+        vma
     )
 endif ()
 
