--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,17 +12,17 @@ set (CMAKE_CXX_EXTENSIONS OFF)
 # Options
 if (WIN32)
 	option(ALIMER_GRAPHICS_D3D12 "Include Direct3D12 backend" ON)
-    option(ALIMER_GRAPHICS_VULKAN "Include Vulkan backend (experimental)" ON)
+    option(ALIMER_GRAPHICS_VULKAN "Include Vulkan backend" ON)
 elseif (WINDOWS_STORE)
 	option(ALIMER_GRAPHICS_D3D12 "Include Direct3D12 backend" ON)
 elseif (${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
-	set(ALIMER_GRAPHICS_VULKAN ON CACHE BOOL "Include Vulkan renderer")
+	set(ALIMER_GRAPHICS_VULKAN ON CACHE BOOL "Include Vulkan backend")
 elseif (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-	set(ALIMER_GRAPHICS_VULKAN ON CACHE BOOL "Include Vulkan renderer")
+	set(ALIMER_GRAPHICS_VULKAN ON CACHE BOOL "Include Vulkan backend")
 elseif (ANDROID)
-	set(ALIMER_GRAPHICS_VULKAN ON CACHE BOOL "Include Vulkan renderer")
+	set(ALIMER_GRAPHICS_VULKAN ON CACHE BOOL "Include Vulkan backend")
 elseif (EMSCRIPTEN)
-	set(ALIMER_GRAPHICS_OPENGL ON CACHE BOOL "Include OpenGL renderer")
+	set(ALIMER_GRAPHICS_OPENGL ON CACHE BOOL "Include OpenGL backend")
 else()
 	message(FATAL_ERROR "Unknown platform ${CMAKE_SYSTEM_NAME}")
 endif ()
@@ -116,6 +116,15 @@ add_subdirectory(src)
 
 if (ALIMER_BUILD_SAMPLES)
     add_subdirectory(samples)
+endif ()
+
+# Print current build configuration
+message (STATUS "Build Configuration:")
+if (ALIMER_GRAPHICS_VULKAN)
+    message (STATUS "Build graphics backend:          Vulkan")
+endif ()
+if (ALIMER_GRAPHICS_D3D12)
+    message (STATUS "Build graphics backend:          Direct3D12")
 endif ()
 
 # Set VS Startup project.
