--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,21 +11,18 @@ set (CMAKE_CXX_EXTENSIONS OFF)
 
 # Options
 if (WIN32)
-	option(ALIMER_GRAPHICS_D3D12 "Include Direct3D12 backend" ON)
-    option(ALIMER_GRAPHICS_VULKAN "Include Vulkan backend" ON)
+	set(ALIMER_GRAPHICS_API Vulkan CACHE STRING  "Select Graphics API [Vulkan | D3D12]") 
+	set_property(CACHE ALIMER_GRAPHICS_API PROPERTY STRINGS Vulkan D3D12)
 elseif (WINDOWS_STORE)
-	option(ALIMER_GRAPHICS_D3D12 "Include Direct3D12 backend" ON)
-elseif (${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
-	set(ALIMER_GRAPHICS_VULKAN ON CACHE BOOL "Include Vulkan backend")
-elseif (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-	set(ALIMER_GRAPHICS_VULKAN ON CACHE BOOL "Include Vulkan backend")
-elseif (ANDROID)
-	set(ALIMER_GRAPHICS_VULKAN ON CACHE BOOL "Include Vulkan backend")
+	set(ALIMER_GRAPHICS_API D3D12 CACHE STRING "Use D3D12 Graphics API" FORCE)
 elseif (EMSCRIPTEN)
-	set(ALIMER_GRAPHICS_OPENGL ON CACHE BOOL "Include OpenGL backend")
+	set(ALIMER_GRAPHICS_API WGPU CACHE STRING "Use WebGPU Graphics API" FORCE)
 else()
-	message(FATAL_ERROR "Unknown platform ${CMAKE_SYSTEM_NAME}")
+	set(ALIMER_GRAPHICS_API Vulkan CACHE STRING  "Select Graphics API [Vulkan | OpenGL]") 
+	set_property(CACHE ALIMER_GRAPHICS_API PROPERTY STRINGS Vulkan OpenGL)
 endif ()
+string(TOUPPER "${ALIMER_GRAPHICS_API}" ALIMER_GRAPHICS_API_UPPER)
+set (ALIMER_${ALIMER_GRAPHICS_API_UPPER} ON)
 
 option(ALIMER_BUILD_SHARED "Build as a shared library" OFF)
 option(ALIMER_BUILD_SAMPLES "Build sample projects" ON)
@@ -120,12 +117,7 @@ endif ()
 
 # Print current build configuration
 message (STATUS "Build Configuration:")
-if (ALIMER_GRAPHICS_VULKAN)
-    message (STATUS "Build graphics backend:          Vulkan")
-endif ()
-if (ALIMER_GRAPHICS_D3D12)
-    message (STATUS "Build graphics backend:          Direct3D12")
-endif ()
+message (STATUS "Graphics API:          ${ALIMER_GRAPHICS_API} (ALIMER_${ALIMER_GRAPHICS_API_UPPER})")
 
 # Set VS Startup project.
 if(CMAKE_VERSION VERSION_GREATER "3.6" AND ALIMER_BUILD_EDITOR)
