--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ cmake_minimum_required(VERSION 3.10)
 # Project declaration
 project (Alimer)
 
+# Target C++17
+set (CMAKE_CXX_STANDARD 17)
+set (CMAKE_CXX_STANDARD_REQUIRED ON)
+
 # Options
 if (WIN32)
     option(ALIMER_D3D11 "Include Direct3D11 backend" ON)
