--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -52,14 +52,6 @@ if(NOT (EMSCRIPTEN OR ANDROID))
     )
 endif ()
 
-if (ALIMER_D3D11)
-    define_engine_source_files(graphics/d3d_common)
-    define_engine_source_files(graphics/d3d11)
-endif()
-if (ALIMER_D3D12)
-    define_engine_source_files(graphics/d3d_common)
-    #define_engine_source_files(graphics/d3d12)
-endif()
 if (ALIMER_VULKAN)
     define_engine_source_files(graphics/vulkan)
 endif()
@@ -92,12 +84,14 @@ if(NOT (EMSCRIPTEN OR ANDROID))
 endif ()
 
 if (ALIMER_D3D12)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE GPU_D3D12_BACKEND)
     target_link_libraries(${PROJECT_NAME} PRIVATE
         D3D12MemoryAllocator
     )
 endif()
 
 if (ALIMER_VULKAN)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE GPU_VULKAN_BACKEND)
     target_link_libraries(${PROJECT_NAME} PRIVATE
         volk
         vma
