Separate gpu logic in vgpu (https://github.com/amerkoleci/vgpu) will be updated later. More vulkan logic: Swapchain creation, context logic and inflight frames data.

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -35,26 +35,6 @@ endmacro()
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
-string(TOLOWER "${AGPU_API}" AGPU_BACKEND_FILE)
-set(GPU_HEADER_FILES
-    gpu/agpu.h
-    gpu/agpu_backend.h
-)
-
-set(GPU_SOURCE_FILES
-    gpu/agpu.c
-)
-
-if (${AGPU_API} STREQUAL "vk")
-    set(GPU_SOURCE_FILES ${GPU_SOURCE_FILES}
-        gpu/vk/vk.h
-        gpu/vk/vk.c
-        gpu/vk/vk_mem_alloc.h
-        gpu/vk/vk_mem_alloc.cpp
-        gpu/agpu_vk.c
-    )
-endif ()
-
 set(HEADER_FILES ${HEADER_FILES} ${GPU_HEADER_FILES})
 set(SOURCE_FILES ${SOURCE_FILES} ${GPU_SOURCE_FILES})
 
@@ -86,8 +66,6 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
     CXX_STANDARD 14
     CXX_STANDARD_REQUIRED YES
     CXX_EXTENSIONS NO
-    C_STANDARD 99
-    C_EXTENSIONS OFF
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
@@ -95,19 +73,13 @@ target_include_directories(${PROJECT_NAME} PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 )
 
+target_link_libraries(${PROJECT_NAME} PUBLIC vgpu)
 target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_DL_LIBS})
-
-target_compile_definitions(${PROJECT_NAME} PRIVATE AGPU_BACKEND_${AGPU_API_UPPER})
 
 if(NOT (EMSCRIPTEN OR ANDROID))
     target_compile_definitions(${PROJECT_NAME} PRIVATE GLFW_BACKEND)
     target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
 endif ()
-
-if (AGPU_VULKAN)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE GPU_VK_BACKEND)
-    target_link_libraries(${PROJECT_NAME} PRIVATE vulkan)
-endif()
 
 if (MSVC)
     set(OPTIMIZATION_FLAGS
