WIP OpenGL backend with Win32 context creation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,15 @@ option(ALIMER_BUILD_SHARED "Build as a shared library" OFF)
 option(ALIMER_BUILD_SAMPLES "Build sample projects" ON)
 option(ALIMER_SKIP_INSTALL "Skips installation targets." OFF)
 
+if (WIN32 OR WINDOWS_STORE)
+	option(ALIMER_D3D11 "Include Direct3D11 backend" ON)
+    option(ALIMER_D3D12 "Include Direct3D12 backend (experimental)" ON)
+    if (WIN32)
+        option(ALIMER_OPENGL "Include OpenGL backend" ON)
+        option(ALIMER_VULKAN "Include Vulkan backend (experimental)" ON)
+    endif ()
+endif ()
+
 if (ANDROID OR IOS OR EMSCRIPTEN)
     set(ALIMER_BUILD_TOOLS OFF CACHE INTERNAL "Disable tools" FORCE)
     set(ALIMER_BUILD_EDITOR OFF CACHE INTERNAL "Disable C# editor" FORCE)
