--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -54,6 +54,18 @@ if(NOT (EMSCRIPTEN OR ANDROID))
     define_engine_source_files(os/glfw)
 endif ()
 
+if (ALIMER_D3D11 OR ALIMER_D3D12)
+    define_engine_source_files(graphics/d3d)
+endif ()
+
+if (ALIMER_D3D11)
+    #define_engine_source_files(graphics/d3d11)
+endif ()
+
+if (ALIMER_D3D12)
+    define_engine_source_files(graphics/d3d12)
+endif ()
+
 if (ALIMER_OPENGL)
     define_engine_source_files(graphics/opengl)
 endif ()
@@ -84,6 +96,14 @@ if(NOT (EMSCRIPTEN OR ANDROID))
     target_compile_definitions(${PROJECT_NAME} PRIVATE GLFW_BACKEND)
     target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
 endif ()
+
+if (ALIMER_D3D11)
+    #target_compile_definitions(${PROJECT_NAME} PRIVATE ALIMER_D3D11)
+endif()
+
+if (ALIMER_D3D12)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE ALIMER_D3D12)
+endif()
 
 if (ALIMER_OPENGL)
     target_compile_definitions(${PROJECT_NAME} PRIVATE ALIMER_OPENGL)
