New simple graphics logic and handle D3D12 frame rendering logic.

--- a/engine/config.h.in
+++ b/engine/config.h.in
@@ -37,6 +37,10 @@
 #cmakedefine ALIMER_NETWORK
 #cmakedefine ALIMER_PLUGINS
 
+/* Graphics */
+#cmakedefine ALIMER_D3D12
+#cmakedefine ALIMER_VULKAN
+
 /* Audio */
 #cmakedefine ALIMER_ENABLE_AUDIO
 #cmakedefine ALIMER_AUDIO_XAUDIO2
